hphp/hack/test/typecheck/incorrect_darray.php.exp
File "incorrect_darray.php", line 3, characters 28-28:
A comma `,` is expected here. (Parsing[1002])
File "incorrect_darray.php", line 3, characters 28-29:
Encountered unexpected text `=>`, was expecting a type hint. (Parsing[1002])
