hphp/hack/test/typecheck/incorrect_darray.php
<?hh // partial

function foo(darray<string => int> $x) : void {}
